Assignment 9/.metadata/.plugins/org.eclipse.cdt.ui/Question1.build.log
13:07:02 **** Incremental Build of configuration Debug for project Question1 ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/lcd.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/lcd.d" -MT"Core/Src/lcd.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/lcd.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/stm32f4xx_it.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/stm32f4xx_it.d" -MT"Core/Src/stm32f4xx_it.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/stm32f4xx_it.o"
arm-none-eabi-gcc "../Core/Src/syscalls.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/syscalls.d" -MT"Core/Src/syscalls.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/syscalls.o"
../Core/Src/main.c:5:2: warning: "/*" within comment [-Wcomment]
    5 |  /* USER CODE BEGIN Header */
      |   
In file included from ../Core/Src/main.c:25:
../Core/Inc/lcd.h:31:23: error: unknown type name 'I2C_HandleTypeDef'; did you mean 'DMA_HandleTypeDef'?
   31 | bool lcd16x2_i2c_init(I2C_HandleTypeDef *pI2cHandle);
      |                       ^~~~~~~~~~~~~~~~~
      |                       DMA_HandleTypeDef
In file included from ../Core/Src/lcd.c:14:
../Core/Inc/lcd.h:31:23: error: unknown type name 'I2C_HandleTypeDef'; did you mean 'DMA_HandleTypeDef'?
   31 | bool lcd16x2_i2c_init(I2C_HandleTypeDef *pI2cHandle);
      |                       ^~~~~~~~~~~~~~~~~
      |                       DMA_HandleTypeDef
../Core/Src/main.c:48:1: error: unknown type name 'I2C_HandleTypeDef'; did you mean 'DMA_HandleTypeDef'?
   48 | I2C_HandleTypeDef hi2c1;
      | ^~~~~~~~~~~~~~~~~
      | DMA_HandleTypeDef
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:100:8: warning: implicit declaration of function 'lcd16x2_i2c_init'; did you mean 'lcd16x2_i2c_printf'? [-Wimplicit-function-declaration]
  100 |   if (!lcd16x2_i2c_init(&hi2c1))
      |        ^~~~~~~~~~~~~~~~
      |        lcd16x2_i2c_printf
../Core/Src/main.c: In function 'MX_I2C1_Init':
../Core/Src/main.c:184:8: error: request for member 'Instance' in something not a structure or union
  184 |   hi2c1.Instance = I2C1;
      |        ^
../Core/Src/main.c:185:8: error: request for member 'Init' in something not a structure or union
  185 |   hi2c1.Init.ClockSpeed = 100000;
      |        ^
../Core/Src/main.c:186:8: error: request for member 'Init' in something not a structure or union
  186 |   hi2c1.Init.DutyCycle = I2C_DUTYCYCLE_2;
      |        ^
../Core/Src/main.c:186:26: error: 'I2C_DUTYCYCLE_2' undeclared (first use in this function)
  186 |   hi2c1.Init.DutyCycle = I2C_DUTYCYCLE_2;
      |                          ^~~~~~~~~~~~~~~
../Core/Src/main.c:186:26: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:187:8: error: request for member 'Init' in something not a structure or union
  187 |   hi2c1.Init.OwnAddress1 = 0;
      |        ^
../Core/Src/main.c:188:8: error: request for member 'Init' in something not a structure or union
  188 |   hi2c1.Init.AddressingMode = I2C_ADDRESSINGMODE_7BIT;
      |        ^
../Core/Src/lcd.c:29:1: error: unknown type name 'I2C_HandleTypeDef'; did you mean 'DMA_HandleTypeDef'?
   29 | I2C_HandleTypeDef* lcd16x2_i2cHandle = NULL;
      | ^~~~~~~~~~~~~~~~~
      | DMA_HandleTypeDef
../Core/Src/main.c:188:31: error: 'I2C_ADDRESSINGMODE_7BIT' undeclared (first use in this function)
  188 |   hi2c1.Init.AddressingMode = I2C_ADDRESSINGMODE_7BIT;
      |                               ^~~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:189:8: error: request for member 'Init' in something not a structure or union
  189 |   hi2c1.Init.DualAddressMode = I2C_DUALADDRESS_DISABLE;
      |        ^
../Core/Src/lcd.c: In function 'lcd_i2c_send_nibble':
../Core/Src/lcd.c:54:12: warning: implicit declaration of function 'HAL_I2C_Master_Transmit' [-Wimplicit-function-declaration]
   54 |     return HAL_I2C_Master_Transmit(lcd16x2_i2cHandle,LCD_I2C_SLAVE_ADDRESS,i2cData, 2,  200);
      |            ^~~~~~~~~~~~~~~~~~~~~~~
../Core/Src/lcd.c: At top level:
../Core/Src/lcd.c:126:23: error: unknown type name 'I2C_HandleTypeDef'; did you mean 'DMA_HandleTypeDef'?
  126 | bool lcd16x2_i2c_init(I2C_HandleTypeDef *pI2cHandle)
      |                       ^~~~~~~~~~~~~~~~~
      |                       DMA_HandleTypeDef
../Core/Src/main.c:189:32: error: 'I2C_DUALADDRESS_DISABLE' undeclared (first use in this function); did you mean 'I2C_DUALADDRESS_DISABLED'?
  189 |   hi2c1.Init.DualAddressMode = I2C_DUALADDRESS_DISABLE;
      |                                ^~~~~~~~~~~~~~~~~~~~~~~
      |                                I2C_DUALADDRESS_DISABLED
../Core/Src/main.c:190:8: error: request for member 'Init' in something not a structure or union
  190 |   hi2c1.Init.OwnAddress2 = 0;
      |        ^
../Core/Src/main.c:191:8: error: request for member 'Init' in something not a structure or union
  191 |   hi2c1.Init.GeneralCallMode = I2C_GENERALCALL_DISABLE;
      |        ^
make: *** [Core/Src/subdir.mk:37: Core/Src/lcd.o] Error 1
make: *** Waiting for unfinished jobs....
../Core/Src/main.c:191:32: error: 'I2C_GENERALCALL_DISABLE' undeclared (first use in this function); did you mean 'I2C_GENERALCALL_DISABLED'?
  191 |   hi2c1.Init.GeneralCallMode = I2C_GENERALCALL_DISABLE;
      |                                ^~~~~~~~~~~~~~~~~~~~~~~
      |                                I2C_GENERALCALL_DISABLED
../Core/Src/main.c:192:8: error: request for member 'Init' in something not a structure or union
  192 |   hi2c1.Init.NoStretchMode = I2C_NOSTRETCH_DISABLE;
      |        ^
../Core/Src/main.c:192:30: error: 'I2C_NOSTRETCH_DISABLE' undeclared (first use in this function); did you mean 'I2C_NOSTRETCH_DISABLED'?
  192 |   hi2c1.Init.NoStretchMode = I2C_NOSTRETCH_DISABLE;
      |                              ^~~~~~~~~~~~~~~~~~~~~
      |                              I2C_NOSTRETCH_DISABLED
../Core/Src/main.c:193:7: warning: implicit declaration of function 'HAL_I2C_Init'; did you mean 'HAL_DMA_Init'? [-Wimplicit-function-declaration]
  193 |   if (HAL_I2C_Init(&hi2c1) != HAL_OK)
      |       ^~~~~~~~~~~~
      |       HAL_DMA_Init
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

13:07:04 Build Failed. 22 errors, 4 warnings. (took 1s.744ms)

